# datasets

./: .gitmodules  setup.cfg
datasets/: __init__.py  data.py  speech_commands.py  zipdataset.py
datasets/utils/: __init__.py
datasets_old/: __init__.py  speech_commands.py
docs/: conf.py  index.rst
utils/: __init__.py
