[metadata]
name = datasets
version = attr: datasets._version.__version__
author = Benjamin Chamand
author_email = benjamin.chamand@irit.fr
description = Additional dataset loaders for pyTorch
long_description = file: README.md
long_description_content_type = test/markdown
keywords = datasets, pytorch
licence = MIT
licence_file = LICENCE
platform = any
url = https://github.com/bchamand/datasets

[options]
zip_safe = false
include_package_data = false
python_requires = >= 3.6
packages = find:
install_requires =
    torch
    avreader @ git+https://github.com/bchamand/pyavreader
    downloader @ git+https://github.com/bchamand/pydownloader

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[options.packages.find]
exclude =
    docs
