[metadata]
name = datasets
version = 0.1.0-dev0
author = Benjamin Chamand
author_email = benjamin.chamand@irit.fr
description = Additional dataset loaders for pyTorch used during my experiments
long_description = file: README.md
long_description_content_type = test/markdown
keywords = datasets, pytorch
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/bchamand/datasets

[options]
zip_safe = true
include_package_data = false
python_requires = >= 3.6
packages = find:
install_requires =
    torch
    avreader @ git+https://github.com/bchamand/pyavreader
    downloader @ git+https://github.com/bchamand/pydownloader

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[options.packages.find]
exclude =
    docs
